@@ -4,8 +4,8 @@
     
   <!-- Licensing Properties -->
   <property name="common.License.exclude.exts" 
-            value="dll,pdb,exe,xml,csproj,user,template,cache,orig" />
-  <property name="common.License.exclude.regex" value="hg|svn|obj|bin" />
+            value="dll,pdb,exe,xml,csproj,user,template,cache,orig,config" />
+  <property name="common.License.exclude.regex" value="hg|svn|obj|bin|Backup" />
   <property name="common.License.search" value="Copyright (c) 2012-2014 Robert Vesse" />
   <property name="common.License.replace" value="License.txt" />
   <property name="common.License.overwrite" value="-overwrite" /> <!-- Alternative is -preserve which does not change existing Licenses -->
@@ -15,7 +15,7 @@
 
   <!-- Version Properties -->
   <!-- When generating ZIP files with the dist targets use the command line -d option to set these appropriately -->
-  <property name="common.version" value="1.2.1" />
+  <property name="common.version" value="1.3.0" />
   
   <!-- Names of ZIP Files generated by dist targets -->
   <property name="common.zip" value="VDS.Common.${common.version}.zip" />
@@ -23,31 +23,13 @@
   
   <!-- Project Sync Targets -->
 
-  <target name="projectsync" description="Syncs the project files" depends="projectsync-net35,projectsync-sl4,projectsync-sl4-wp7,projectsync-portable" />
+  <target name="projectsync" description="Syncs the project files" depends="projectsync-net35,projectsync-portable" />
 
   <target name="projectsync-net35" description="Syncs the .Net 3.5 Client Profile build project file">
     <exec program="Build/SyncProjects.exe">
       <arg value="sync" />
       <arg value="src/net40-client/VDS.Common.Net40.csproj" />
       <arg value="src/net35-client/VDS.Common.Net35.csproj" />
-      <arg value="..\net40-client\" />
-    </exec>
-  </target>
-
-  <target name="projectsync-sl4" description="Syncs the Silverlight 4 build project file">
-    <exec program="Build/SyncProjects.exe">
-      <arg value="sync" />
-      <arg value="src/net40-client/VDS.Common.Net40.csproj" />
-      <arg value="src/sl4/VDS.Common.Silverlight4.csproj" />
-      <arg value="..\net40-client\" />
-    </exec>
-  </target>
-
-  <target name="projectsync-sl4-wp7" description="Syncs the Silverlight 4 for Windows Phone 7 build project file">
-    <exec program="Build/SyncProjects.exe">
-      <arg value="sync" />
-      <arg value="src/net40-client/VDS.Common.Net40.csproj" />
-      <arg value="src/sl4-wp/VDS.Common.WindowsPhone7.csproj" />
       <arg value="..\net40-client\" />
     </exec>
   </target>
@@ -123,22 +105,10 @@
     <copy overwrite="true" todir="Build/NuGet/lib/net35-client" file="src/net35-client/bin/Debug/VDS.Common.dll" />
     <copy overwrite="true" todir="Build/NuGet/lib/net35-client" file="src/net35-client/bin/Debug/VDS.Common.xml" />
     <copy overwrite="true" todir="Build/NuGet/lib/net35-client" file="src/net35-client/bin/Debug/VDS.Common.pdb" />
-    <!-- Silverlight 4 -->
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4" file="src/sl4/bin/Debug/VDS.Common.dll" />
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4" file="src/sl4/bin/Debug/VDS.Common.xml" />
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4" file="src/sl4/bin/Debug/VDS.Common.pdb" />
-    <!-- Silverlight 4 for Windows Phone -->
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4-wp" file="src/sl4-wp/bin/Debug/VDS.Common.dll" />
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4-wp" file="src/sl4-wp/bin/Debug/VDS.Common.xml" />
-    <copy overwrite="true" todir="Build/NuGet/lib/sl4-wp" file="src/sl4-wp/bin/Debug/VDS.Common.pdb" />
-    <!-- Portable Library for Windows 8 and .Net 4.5 -->
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-windows8+net45" file="src/portable/bin/Debug/VDS.Common.dll" />
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-windows8+net45" file="src/portable/bin/Debug/VDS.Common.xml" />
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-windows8+net45" file="src/portable/bin/Debug/VDS.Common.pdb" />
     <!-- Portable Library -->
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-win+net40+sl40+wp" file="src/portable/bin/Debug/VDS.Common.dll" />
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-win+net40+sl40+wp" file="src/portable/bin/Debug/VDS.Common.xml" />
-    <copy overwrite="true" todir="Build/NuGet/lib/portable-win+net40+sl40+wp" file="src/portable/bin/Debug/VDS.Common.pdb" />
+    <copy overwrite="true" todir="Build/NuGet/lib/portable-net4+sl5+netcore45+wp8+MonoAndroid1+MonoTouch1" file="src/portable/bin/Debug/VDS.Common.dll" />
+    <copy overwrite="true" todir="Build/NuGet/lib/portable-net4+sl5+netcore45+wp8+MonoAndroid1+MonoTouch1" file="src/portable/bin/Debug/VDS.Common.xml" />
+    <copy overwrite="true" todir="Build/NuGet/lib/portable-net4+sl5+netcore45+wp8+MonoAndroid1+MonoTouch1" file="src/portable/bin/Debug/VDS.Common.pdb" />
   </target>
   
   <!-- Clean Targets -->
