@@ -26,10 +26,6 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "VDS.Common.Test", "test\VDS
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "VDS.Common.Net35", "src\net35-client\VDS.Common.Net35.csproj", "{1EBE35AB-6D46-40D5-8C81-78D7A34A5290}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "VDS.Common.Silverlight4", "src\sl4\VDS.Common.Silverlight4.csproj", "{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350}"
-EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "VDS.Common.WindowsPhone7", "src\sl4-wp\VDS.Common.WindowsPhone7.csproj", "{64705ED9-D0AC-4601-A5EF-0AB0CB403153}"
-EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "VDS.Common.Portable", "src\portable\VDS.Common.Portable.csproj", "{3E259A2C-D877-4ABC-A8ED-4C0AFDAED530}"
 EndProject
 Global
@@ -50,14 +46,6 @@ Global
 		{1EBE35AB-6D46-40D5-8C81-78D7A34A5290}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{1EBE35AB-6D46-40D5-8C81-78D7A34A5290}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{1EBE35AB-6D46-40D5-8C81-78D7A34A5290}.Release|Any CPU.Build.0 = Release|Any CPU
-		{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350}.Release|Any CPU.Build.0 = Release|Any CPU
-		{64705ED9-D0AC-4601-A5EF-0AB0CB403153}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{64705ED9-D0AC-4601-A5EF-0AB0CB403153}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{64705ED9-D0AC-4601-A5EF-0AB0CB403153}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{64705ED9-D0AC-4601-A5EF-0AB0CB403153}.Release|Any CPU.Build.0 = Release|Any CPU
 		{3E259A2C-D877-4ABC-A8ED-4C0AFDAED530}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{3E259A2C-D877-4ABC-A8ED-4C0AFDAED530}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{3E259A2C-D877-4ABC-A8ED-4C0AFDAED530}.Release|Any CPU.ActiveCfg = Release|Any CPU
@@ -69,8 +57,6 @@ Global
 	GlobalSection(NestedProjects) = preSolution
 		{176B21E1-83C4-44AE-AA8E-DC48C33CB3A8} = {6FDC4E37-E2D2-4029-A187-633B5F4AFFA0}
 		{1EBE35AB-6D46-40D5-8C81-78D7A34A5290} = {6FDC4E37-E2D2-4029-A187-633B5F4AFFA0}
-		{71F08B3B-8713-4FFE-BFC9-57CF6E4E8350} = {6FDC4E37-E2D2-4029-A187-633B5F4AFFA0}
-		{64705ED9-D0AC-4601-A5EF-0AB0CB403153} = {6FDC4E37-E2D2-4029-A187-633B5F4AFFA0}
 		{3E259A2C-D877-4ABC-A8ED-4C0AFDAED530} = {6FDC4E37-E2D2-4029-A187-633B5F4AFFA0}
 		{5091A75F-7EF2-4813-A2F0-2E106507AED3} = {998C61CD-FB9B-4528-8687-7F59CF07A51A}
 	EndGlobalSection
